--- a/omnifood/public/index.html
+++ b/omnifood/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href='normalize.css' rel='stylesheet' type='text/css'>
-    <link href='grid.css' rel='stylesheet' type='text/css'>
+    <link href='./css/normalize.css' rel='stylesheet' type='text/css'>
+    <link href='./css/grid.css' rel='stylesheet' type='text/css'>
+    <link href='./css/ionicons.min.css' rel="stylesheet" type="text/css" >
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <title> Omnifood</title>
