--- a/omnifood/public/index.html
+++ b/omnifood/public/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-  
-    <link href='./css/ionicons.min.css' rel="stylesheet" type="text/css" >
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-    <meta charset="utf-8" />
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name='description' content='Omnifood is a premium food delivery service with the mission to bring affordable and healty meals to as many people as possible.'>
+    <link href='./css/ionicons.min.css' rel='stylesheet' type='text/css' >
+    <link href='https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap' rel='stylesheet'>
+    <link rel='apple-touch-icon' sizes='180x180' href='favicon/apple-touch-icon.png'>
+    <link rel='icon' type='image/png' sizes='32x32' href='favicon/favicon-32x32.png'>
+    <link rel='icon' type='image/png' sizes='16x16' href='favicon/favicon-16x16.png'>
+    <link rel='manifest' href='favicon/site.webmanifest'>
+    <link rel='mask-icon' href='favicon/safari-pinned-tab.svg' color='#5bbad5'>
     <title> Omnifood</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id='root'></div>
   </body>
 </html>
